# BarberPro

./: .gitignore  README.md  opencode.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_seed_admin.py  4088b6d7567b_initial.py  94209b93d9b6_remove_price_from_barbers.py
backend/app/: main.py
backend/app/application/use_cases/: appointment_use_cases.py  auth_use_cases.py  availability_use_cases.py  barber_use_cases.py  service_use_cases.py
backend/app/config/: settings.py
backend/app/domain/entities/: __init__.py  admin.py  appointment.py  availability.py  barber.py  barber_service.py  service.py
backend/app/domain/interfaces/: __init__.py  repositories.py
backend/app/infrastructure/auth/: jwt.py  password.py
backend/app/infrastructure/database/: base.py  engine.py
backend/app/infrastructure/notifications/: n8n.py
backend/app/infrastructure/redis/: client_repo.py
backend/app/interfaces/api/: dependencies.py
backend/app/interfaces/schemas/: appointment_schema.py  auth_schema.py  (+3 more)
backend/tests/: conftest.py
backend/tests/application/: test_appointment_use_cases.py  test_auth_use_cases.py  test_barber_use_cases.py
backend/tests/domain/: test_admin.py  test_appointment.py  test_barber.py  test_service.py
backend/tests/infrastructure/: test_barber_repo.py  test_jwt.py  test_n8n.py  test_redis_repo.py
backend/tests/interfaces/: test_api_appointments.py  test_api_auth.py  test_api_availability.py  test_api_barbers.py
(+100 files in other folders)
